<resources>
    <string name="app_name">Calculadora de Fechas</string>
    <string name="title_intervalos">Calcular intervalo de tiempo</string>
    <string name="title_futuro">Calcular tiempo futuro</string>
    <string name="title_pasado">Calcular tiempo pasado</string>
    <string name="title_edades">Calcular edad</string>
    <string name="history_btn_text">Historial</string>
    <string name="fecha_hasta">Fecha hasta:</string>
    <string name="fecha_desde">Fecha desde:</string>
    <string name="calcular">Calcular</string>
    <string name="resultado">Resultado</string>
    <string name="defaultResultTime">0</string>
    <string name="hoursSuffix">horas</string>
    <string name="daysSuffix">días</string>
    <string name="weeksSuffix">semanas</string>
    <string name="yearsSuffix">años</string>
    <string name="nacimientoLabel">Fecha de nacimiento:</string>
    <string name="monthsSuffix">meses</string>
    <string name="minutesSuffix">minutos</string>
    <string name="secondsSuffix">segundos</string>
    <string name="futuroLabel">Fecha inicial:</string>
    <string name="daysToAddLabel">Días a sumar:</string>
    <string name="daysToSubtractLabel">Días a restar:</string>
    <string name="pasadoLabel">Fecha inicial:</string>
    <string-array name="mode_selector_array">
        <item>Calcular intervalo de tiempo</item>
        <item>Calcular tiempo futuro</item>
        <item>Calcular tiempo pasado</item>
        <item>Calcular edad</item>
    </string-array>
</resources>
