<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.mdemoya.practicas_altice.proyecto_curso_basico.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:gravity="center"
            android:orientation="horizontal"
            android:padding="20dp">

            <ImageView
                android:id="@+id/mainImage"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:adjustViewBounds="true"
                android:scaleType="fitCenter"
                app:srcCompat="@drawable/ic_event_black_96dp" />

            <ImageView
                android:id="@+id/secondImage"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:adjustViewBounds="true"
                android:scaleType="fitCenter"
                app:srcCompat="@drawable/ic_compare_arrows_black_96dp" />

        </LinearLayout>

        <Button
            android:id="@+id/interval_activity_button"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/ic_date_range_white_18dp"
            android:text="@string/title_intervalos"
            android:textAllCaps="false" />

        <Button
            android:id="@+id/future_activity_button"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/ic_next_week_white_18dp"
            android:text="@string/title_futuro"
            android:textAllCaps="false" />

        <Button
            android:id="@+id/past_activity_button"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/ic_history_white_18dp"
            android:text="@string/title_pasado"
            android:textAllCaps="false" />

        <Button
            android:id="@+id/age_activity_button"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/ic_cake_white_18dp"
            android:text="@string/title_edades"
            android:textAllCaps="false" />

    </LinearLayout>

</ScrollView>